--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-intersection-observer": "^9.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
